[tool.poetry]
name = "mapas-brasil"
version = "0.1.0"
description = ""
authors = ["tomast1337 <vycasnicolas@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
osmnx = "^2.0.1"
pandas = "^2.2.3"
matplotlib = "^3.10.0"
ipykernel = "^6.29.5"
numpy = "^2.2.3"
seaborn = "^0.13.2"
scipy = "^1.15.2"
statsmodels = "^0.14.4"
tqdm = "^4.67.1"
svgwrite = "^1.4.3"
beautifulsoup4 = "^4.13.3"
lxml = "^5.3.1"
shapely = "^2.0.7"
svgpathtools = "^1.6.1"
geopandas = "^1.0.1"
cairosvg = "^2.7.1"
pillow = "^11.1.0"
unidecode = "^1.3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
